Added put, post, delete endpoints
